[tool.poetry]
name = "hexagonal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.4"
starlette = {version = "^0.13.2", optional = true}
motor = {version = "^2.1.0", optional = true}
basictracer = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tools.poetry.extras]
starlette_rest_api = ["starlette"]
mongo = ["motor"]
